# Regex-Generator

./: LICENSE  README.md  setup.cfg
RegexGenerator/: regex_generator.py
regex_generator_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
regexgeneratorlib/: regex_generator.py
