[metadata]
name = regex-generator-lib
version = 0.0.4
author = Donald Buhl-Brown
author_email = donald.buhlbrown@gmail.com
description = A Python library for programmatically generating Regex.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbuhlbrown/Regex-Generator
project_urls =
    Bug Tracker = https://github.com/dbuhlbrown/Regex-Generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6